--- a/Phollop is PROW.html
+++ b/Phollop is PROW.html
@@ -12,7 +12,7 @@
        
 <title> Yoda Music </title>
 
-<h1> Yoda Seaglles Music </h1>
+<h1> Yoda Seagulls Music </h1>
 
 <img src="http://31.media.tumblr.com/5954007035c15f66c6b23f8700357436/tumblr_mmnizoNfFS1spbth3o1_400.gif">
 
