Update Phollop is PROW.html

--- a/Phollop is PROW.html
+++ b/Phollop is PROW.html
@@ -24,7 +24,7 @@
     audio.loop = true;
     audio.play();
     
-    var rotateE = document.getElementById('rotateE);
+    var rotateE = document.getElementById('rotateE');
     var angle = 0;
     function update(){
         angle++;
