Update Phollop is PROW.html

--- a/Phollop is PROW.html
+++ b/Phollop is PROW.html
@@ -32,8 +32,8 @@
             angle = 0;
         }
         
-        var word = "transform: rotate(" +angle+ "deg);";
-        rotateE.style = word;
+        var word = "rotate(" +angle+ "deg)";
+        rotateE.style.transforme = word;
         
         requestAnimationFrame(update);
     }
