Update Phollop is PROW.html

--- a/Phollop is PROW.html
+++ b/Phollop is PROW.html
@@ -4,7 +4,7 @@
         text-align: center;
         background-image: url("https://media.tenor.co/images/5390be40d3f8924c5524b10a87392551/raw");
         background-size: cover;
-        color: Green;
+        color: Light Blue;
     }
 
 
