Update Phollop is PROW.html

--- a/Phollop is PROW.html
+++ b/Phollop is PROW.html
@@ -10,9 +10,9 @@
 
 </style>
        
-<title> Yoda Music </title>
+<title> Lazy Music </title>
 <div id="rotateE">
-    <h1> Yoda Seagulls Music </h1>
+    <h1> Lazy Music </h1>
 </div>
 
 <img src="https://media.giphy.com/media/11ocEaLDZafNHa/giphy.gif">
